[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultctl"
version = "0.2.1"
description = "Project vault initializer with mountable global vault folders"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
vaultctl = "vaultctl.cli:main"
